[gd_scene load_steps=2 format=3 uid="uid://bkpat5s5jw6t6"]

[ext_resource type="Script" path="res://FAN/scenes/TtlFANShooter/TtlFANShooter.gd" id="1_kyutf"]

[node name="TtlFANShooter" type="Node2D"]
script = ExtResource("1_kyutf")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="OnShootTimerTimeout"]
